Updates from Overleaf

--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -359,7 +359,7 @@ Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent 
 \end{center}
 \end{table}
 
-If the weathering of juvenile lithologies of the SEAI played an important role in driving Neogene cooling, the intuitive expectation is that marine \SrSr should have decreased over the Neogene as the global weathering flux of low \SrSr juvenile lithologies increased (compensated by a decrease in the global weathering flux of high \SrSr radiogenic lithologies to maintain constant global \COtwo consumption). Contrary to this expectation, marine \SrSr has been rising since ca. 35~Ma (Fig. \ref{fig:seawater_model}). However, the global weathering flux of isotopically-representative lithologies can be decoupled from marine \SrSr via the regional weathering of isotopically-unique source rocks. For example, the decrease in slope in the marine \SrSr record ca. 15~Ma has been attributed to exhumation of relatively low \SrSr and high \OsOs Lesser Himalayan lithologies \citep{Myrow2015a, Colleps2018a}. This change in slope could also be at least partially driven by the exhumation of mafic and organic-rich forearc sediments in the SEAI during arc-continent collision.
+If the weathering of juvenile lithologies of the SEAI played an important role in driving Neogene cooling, the intuitive expectation is that marine \SrSr should have decreased over the Neogene as the global weathering flux of low \SrSr juvenile lithologies increased (compensated by a decrease in the global weathering flux of high \SrSr radiogenic lithologies to maintain constant global \COtwo consumption). Contrary to this expectation, marine \SrSr has been rising since ca. 35~Ma (Fig. \ref{fig:seawater_model}). However, the global weathering flux of isotopically-representative lithologies can be decoupled from marine \SrSr via the regional weathering of isotopically-unique source rocks. For example, the decrease in slope in the marine \SrSr record ca. 15~Ma has been attributed to exhumation of relatively low \SrSr and high \OsOs Outer Lesser Himalaya lithologies \citep{Myrow2015a, Colleps2018a}. This change in slope could also be at least partially driven by the exhumation of mafic and organic-rich forearc sediments in the SEAI during arc-continent collision.
 
 To test whether the Neogene marine \SrSr record is compatible with an increase in the global weathering flux of low \SrSr juvenile lithologies over the Neogene, we implement a simple seawater model that simulates changes in marine \SrSr that result from changing fluxes from several sources \citep{Brass1975a}:
 
@@ -371,9 +371,11 @@ $R_{SW}$ is the \SrSr composition of the ocean, $t$ is time in the model, $\tau$
 
 At initialization, we set the Sr flux from each of these sources such that at 50~Ma marine \SrSr is $\sim$0.7078 (Fig. \ref{fig:seawater_model}). As a percentage of the total Sr input into the ocean, this model yields hydrothermal = 10\%, carbonate = 35\%, radiogenic lithologies = 13\%, and juvenile lithologies = 42\%. These ini- tial steady-state Sr fluxes are similar to those estimated for the present-day (hydrothermal = 10\%, carbonate = 35\%, radiogenic lithologies = 25\%, and juvenile lithologies = 30\%, from \citealt{Allegre2010a}). The residence time of strontium in the oceans is poorly constrained, primarily due to the lack of constraints on the input flux of strontium from hydrothermal systems. Recent estimates for this residence time range from $\sim$1.7--3.7~m.y. \citep{Krabbenhoft2010a}, so we use a value that falls within this range (2.4~m.y.; \citealp{Ravizza2003a}).
 
-The \SrSr of Himalayan lithologies is highly variable, with values ranging from $\sim$0.71--1.11 \citep{Oliver2003a}, and as orogenesis proceeded, the \SrSr of waters draining the Himalayas has changed as different tectonic units are exhumed, as evidenced by the \SrSr of pedogenic clays in the Bengal Fan and soil carbonate in Nepal (Fig. \ref{fig:seawater_model}; \citealp{Derry1996a, Quade1997a}). In our model, we make the assumption that the \SrSr of waters draining the Himalayas has been constant at 0.720 prior to 16~Ma, when the Outer Lesser Himalaya began to be exhumed \citep{Myrow2015a, Colleps2018a}. We also assume that the ratio of Sr coming from carbonates vs. radiogenic lithologies has remained constant throughout the past 50 m.y. (i.e. 70\% from carbonates and 30\% from radiogenic lithologies; \citealp{Oliver2003a}). Finally, we assume that the average \SrSr composition of Himalayan carbonates and radiogenic lithologies that are being weathered at any given time is identical. Although this final assumption is likely incorrect in detail, it has been shown that Sr in carbonates from the Lesser and Higher Himalaya have equilibrated with Sr in coexisting silicates \citep{Oliver2003a}, which at least partially justifies our simplifying assumption.
+The \SrSr of Himalayan lithologies is highly variable, with values ranging from $\sim$0.71--1.11 \citep{Oliver2003a}, and as orogenesis proceeded, the \SrSr of waters draining the Himalayas has changed as different tectonic units are exhumed, as evidenced by the \SrSr of pedogenic clays in the Bengal Fan and soil carbonate in Nepal, which are interpreted to reflect the \SrSr of Himalayan rivers (Fig. \ref{fig:seawater_model}; \citealp{Derry1996a, Quade1997a}). In our model, we make the assumption that the \SrSr of waters draining the Himalayas has been constant at 0.720 prior to 16~Ma, when the Outer Lesser Himalaya began to be exhumed \citep{Myrow2015a, Colleps2018a}. We also assume that the ratio of Sr coming from carbonates vs. radiogenic lithologies has remained constant throughout the past 50 m.y. (i.e. 70\% from carbonates and 30\% from radiogenic lithologies; \citealp{Oliver2003a}). Finally, we assume that the average \SrSr composition of Himalayan carbonates and radiogenic lithologies that are being weathered at any given time is identical. Although this final assumption is likely incorrect in detail, it has been shown that Sr in carbonates from the Lesser and Higher Himalaya have equilibrated with Sr in coexisting silicates \citep{Oliver2003a}, which at least partially justifies our simplifying assumption.
 
-We maintain initial conditions until 35~Ma, at which point we begin to change both global and Himalayan subaerial weathering fluxes (Fig. \ref{fig:seawater_model}). The two primary watersheds draining the Himalayas are the Indus and Ganges-Brahmaputra basins. Together, the Sr flux from these two watersheds in the present day is $\sim$9.5$\times$10$^{8}$~mol/yr. We therefore linearly increase the total Sr flux coming from the Himalayas to 1$\times$10$^{9}$~mol/yr from 35~Ma to present. We also linearly increase the Sr flux coming from non-Himalayan radiogenic lithologies 35--16~Ma. Importantly, we also linearly decrease the Sr flux coming from non-Himalayan juvenile lithologies over this same time period in order to maintain constant \COtwo consumption (i.e. constant global Ca+Mg flux from subaerial weathering). In order to match the observed increase in marine \SrSr ca. 35--16~Ma, the Sr flux coming from non-Himalayan juvenile lithologies needs to be increased to a value 1.42$\times$ the initial value.
+We maintain initial conditions until 35~Ma, at which point we begin to change both global and Himalayan subaerial weathering fluxes (Fig. \ref{fig:seawater_model}). The two primary watersheds draining the Himalayas are the Indus and Ganges-Brahmaputra basins. Together, the Sr flux from these two watersheds in the present day is $\sim$9.5$\times$10$^{8}$~mol/yr. We therefore linearly increase the total Sr flux coming from the Himalayas to 1$\times$10$^{9}$~mol/yr from 35~Ma to present. We also linearly increase the Sr flux coming from non-Himalayan radiogenic lithologies 35--16~Ma. Importantly, we also linearly decrease the Sr flux coming from non-Himalayan juvenile lithologies over this same time period in order to maintain constant \COtwo consumption (i.e. constant global Ca+Mg flux from subaerial silicate weathering). In order to match the observed increase in marine \SrSr ca. 35--16~Ma, the Sr flux coming from non-Himalayan juvenile lithologies needs to be increased to a value 1.42$\times$ the initial value.
+
+At 16~Ma, we begin to change the subaerial weathering fluxes in accordance with existing constraints (Fig. \ref{fig:seawater_model}). First, the total Sr flux from Himalayan lithologies continues to linearly increase. Second, we linearly decrease the \SrSr of Himalayan lithologies from 0.720 to 0.712 16--12~Ma, then linearly increase it from 0.712 to 0.750 12--0~Ma. The former \SrSr decrease is intended to represent the exhumation of low \SrSr Outer Lesser Himalaya lithologies, and the latter \SrSr increase is intended to represent the exhumation of higher \SrSr Inner Lesser Himalaya lithologies \citep{Myrow2015a, Colleps2018a}. These Himalayan \SrSr changes are consistent with the scattered \SrSr of pedogenic clays in the Bengal Fan and soil carbonate in Nepal \citep{Derry1996a, Quade1997a}. We do not model the decrease in Himalayan river \SrSr \textless5~Ma, since its timing and magnitude is poorly constrained.
 
 \clearpage
 
