Updates from Overleaf

--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -330,6 +330,13 @@ Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent 
     \label{fig:seawater_model}
 \end{figure}
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.6\textwidth]{Figures/lithology_CO2_consumption.pdf}
+    \caption{xxx}
+    \label{fig:lithology_CO2_consumption}
+\end{figure}
+
 \begin{table}[h!]
 \caption{Geochemical properties of sources used in the seawater model presented in Figure \ref{fig:seawater_model}.} 
 \begin{center}
@@ -375,7 +382,9 @@ The \SrSr of Himalayan lithologies is highly variable, with values ranging from 
 
 We maintain initial conditions until 35~Ma, at which point we begin to change both global and Himalayan subaerial weathering fluxes (Fig. \ref{fig:seawater_model}). The two primary watersheds draining the Himalayas are the Indus and Ganges-Brahmaputra basins. Together, the Sr flux from these two watersheds in the present day is $\sim$9.5$\times$10$^{8}$~mol/yr. We therefore linearly increase the total Sr flux coming from the Himalayas to 1$\times$10$^{9}$~mol/yr from 35~Ma to present. We also linearly increase the Sr flux coming from non-Himalayan radiogenic lithologies 35--16~Ma. Importantly, we also linearly decrease the Sr flux coming from non-Himalayan juvenile lithologies over this same time period in order to maintain constant \COtwo consumption (i.e. constant global Ca+Mg flux from subaerial silicate weathering). In order to match the observed increase in marine \SrSr ca. 35--16~Ma, the Sr flux coming from non-Himalayan juvenile lithologies needs to be increased to a value 1.42$\times$ the initial value.
 
-At 16~Ma, we begin to change the subaerial weathering fluxes in accordance with existing constraints (Fig. \ref{fig:seawater_model}). First, the total Sr flux from Himalayan lithologies continues to linearly increase. Second, we linearly decrease the \SrSr of Himalayan lithologies from 0.720 to 0.712 16--12~Ma, then linearly increase it from 0.712 to 0.750 12--0~Ma. The former \SrSr decrease is intended to represent the exhumation of low \SrSr Outer Lesser Himalaya lithologies, and the latter \SrSr increase is intended to represent the exhumation of higher \SrSr Inner Lesser Himalaya lithologies \citep{Myrow2015a, Colleps2018a}. These Himalayan \SrSr changes are consistent with the scattered \SrSr of pedogenic clays in the Bengal Fan and soil carbonate in Nepal \citep{Derry1996a, Quade1997a}. We do not model the decrease in Himalayan river \SrSr \textless5~Ma, since its timing and magnitude is poorly constrained.
+At 16~Ma, we begin to change the subaerial weathering fluxes in accordance with existing constraints (Fig. \ref{fig:seawater_model}). First, the total Sr flux from Himalayan lithologies continues to linearly increase. Second, we linearly decrease the \SrSr of Himalayan lithologies from 0.720 to 0.715 16--12~Ma, then linearly increase it from 0.715 to 0.740 12--3~Ma, then linearly decrease it from 0.740 to 0.728 3--0~Ma. The first \SrSr decrease is intended to represent the exhumation of low \SrSr Outer Lesser Himalaya lithologies, the second \SrSr increase is intended to represent the exhumation of higher \SrSr Inner Lesser Himalaya lithologies \citep{Myrow2015a, Colleps2018a}, and the third \SrSr decrease is intended to represent a Pliocene-Quaternary fall in Himalayan riverine \SrSr to present-day values. These Himalayan \SrSr changes are consistent with the scattered \SrSr of pedogenic clays in the Bengal Fan and soil carbonate in Nepal \citep{Derry1996a, Quade1997a}.
+
+In addition to these Himalayan changes, we also linearly decrease the Ca+Mg flux coming from non-Himalayan radiogenic lithologies to a value 0.96$\times$ the 16~Ma value. This 0.96 value was obtained from our GEOCLIM experiments, in which 
 
 \clearpage
 
