--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -91,7 +91,7 @@ Over geologic time-scales, \COtwo enters Earth's ocean--atmosphere system primar
 
 Topography, climate, and lithology all effect chemical weathering. High-relief regions lack extensive regolith development, and thus tend to have reaction-limited weathering regimes that are more prone to adjust when climate changes \cite{Gabet2009a, West2012a, Maher2014a}. High physical erosion rates contribute to high chemical weathering fluxes in these high-relief regions \citep{Godderis2017b}. In warm and wet regions, mineral dissolution kinetics are faster leading to enhanced chemical weathering \cite{Lasaga1994a, West2012a}. Mafic rocks have higher Ca and Mg concentrations and dissolution rates than felsic rocks, and thus have the potential to more efficiently sequester carbon through silicate weathering \cite{Dessert2003a}. These factors have lead to the proposal that arc-continent collisions, which create steep landscapes of mafic lithologies, within the tropical rain belt have been important in enhancing global weatherability, lowering atmospheric \pCOtwo, and initiating glacial climate over the past 520~m.y. \cite{Jagoutz2016a, Swanson-Hysell2017a, Macdonald2019a} and perhaps in the Neoproterozoic as well \cite{Park2019b}.
 
-Quantitatively estimating the magnitude of decrease in steady-state \pCOtwo associated with the emergence of a region with a high carbon sequestration potential, such as the SEAI, is not straight-forward. As this region emerges, the total global silicate weathering flux will briefly exceed the volcanic degassing flux, causing \pCOtwo to initially decline. However, the sensitivity of the silicate weathering flux in any particular location to this change in \pCOtwo is variable and dependent on the specific topography, climate, and lithology at that location. Furthermore, how the local climate responds to this change in \pCOtwo is itself spatially-variable. Therefore, the magnitude of \pCOtwo change that is required to balance the total global silicate weathering flux with the volcanic degassing flux will depend on the specific spatial distribution of topography, climate, and lithology at the time of emergence. As a result, any attempt to meaningfully estimate the decrease in steady-state \pCOtwo associated with emergence of the SEAI must model spatially-resolved climatology and silicate weathering fluxes in tandem and account for the spatial distribution of the factors that affect these inter-connected systems.
+Quantitatively estimating the magnitude of decrease in steady-state \pCOtwo associated with the emergence of a region with a high carbon sequestration potential, such as the SEAI, is not straight-forward. As this region emerges, the total global silicate weathering flux will briefly exceed the volcanic degassing flux, causing \pCOtwo to initially decline until a new steady-state is established where the total magnitude of the \COtwo sinks is the same as before the change. However, the sensitivity of the silicate weathering flux in any particular location to this change in \pCOtwo is variable and dependent on the specific topography, climate, and lithology at that location. Furthermore, how regional climate responds to this change in \pCOtwo is itself spatially-variable. Therefore, the magnitude of \pCOtwo change that is required to balance the total global silicate weathering flux with the volcanic degassing flux will depend on the specific spatial distribution of topography, climate, and lithology at the time of emergence. As a result, any attempt to meaningfully estimate the decrease in steady-state \pCOtwo associated with emergence of the SEAI must model spatially-resolved climatology and silicate weathering fluxes in tandem and account for the spatial distribution of the factors that affect these inter-connected systems.
 
 \section*{GEOCLIM Model}
 
@@ -116,7 +116,7 @@ The values of four parameters within the silicate weathering component that modi
 
 \subsection*{Climate Model Component}
 
-Having calibrated the silicate weathering component of GEOCLIM, we use it to estimate the decrease in steady-state \pCOtwo associated with SEAI emergence. For the climate model component, we use temperature and runoff from a subset of the GFDL CM2.0 experiments \cite{Delworth2006b} (\SI). These experiments are well suited for this analysis because all non-\COtwo forcings are held constant at values representative of pre-Industrial conditions, allowing the effect of changing \pCOtwo on climatology to be isolated. Furthermore, the experiments were run long enough for the final system to approximate steady-state.
+Having calibrated the silicate weathering component of GEOCLIM, we use it to estimate the decrease in steady-state \pCOtwo associated with SEAI emergence. For the climate model component, we use temperature and runoff from a subset of the GFDL CM2.0 experiments \cite{Delworth2006b} (\SI). These experiments are well-suited for this analysis because all non-\COtwo forcings are held constant at values representative of pre-industrial conditions, allowing the effect of changing \pCOtwo on climatology to be isolated. Furthermore, the experiments were run long enough for the final system to approximate steady-state.
 
 \section*{Paleoshorelines}
 
@@ -140,9 +140,9 @@ We use GEOCLIM to estimate \pCOtwo associated with the reconstructed subaerial e
 
 \section*{\pCOtwo Estimates}
 
-Using the 573 unique parameter combinations, the ``paleo-SEAI'' scenarios resulted in 526--678~ppm for 15~Ma, 457--516~ppm for 10~Ma, and 391--434~ppm \pCOtwo for 5~Ma (Fig. \ref{fig:scenario_pCO2}). These results indicate a progressive decrease in \pCOtwo over the Neogene associated with the emergence of the SEAI, and suggest that without this emergence, pre-Industrial \pCOtwo would have been $\sim$526--678~ppm.
+Using the 573 unique parameter combinations, the ``paleo-SEAI'' scenarios resulted in 526--678~ppm for 15~Ma, 457--516~ppm for 10~Ma, and 391--434~ppm \pCOtwo for 5~Ma (Fig. \ref{fig:scenario_pCO2}). These results indicate a progressive decrease in \pCOtwo over the Neogene associated with the emergence of the SEAI, and suggest that without this emergence, pre-industrial \pCOtwo would have been $\sim$526--678~ppm.
 
-Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation \cite{Foster2017a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene (\SI; Fig. S9), indicating that the increase in subaerially-exposed land area and tectonic topography of the SEAI is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values of decreasing \pCOtwo associated with SEAI emergence are therefore consistent with the record of Neogene climate with Miocene ice sheets on Antarctica \cite{Sugden1995a} followed by Northern Hemisphere ice sheets developing in the Pliocene \cite{Haug2005a} as \pCOtwo subsequently decreased.
+Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation \cite{Foster2017a}. The \pCOtwo values from the 5~Ma paleo-SEAI scenario overlap with many proxy-based estimates as well as values that emerge from hybrid climate model data assimilation approaches \cite{Berends2020a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene (\SI; Fig. S9), indicating that the increase in subaerially-exposed land area and tectonic topography of the SEAI is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values of decreasing \pCOtwo associated with SEAI emergence are therefore consistent with the record of Neogene climate with Miocene ice sheets on Antarctica \cite{Sugden1995a} followed by Northern Hemisphere ice sheets developing in the Pliocene \cite{Haug2005a} as \pCOtwo subsequently decreased.
 
 The results of our SEAI scenarios highlight the importance of the combination of topography, runoff, and lithology in setting Earth's climate state. To independently explore the effect of the modern-day surface exposure of low-relief basaltic lavas on steady-state \pCOtwo \cite{Kent2013a}, we replace mafic volcanics associated with the Deccan Traps, Ethiopian Traps, and Columbia River Basalts with the Ca+Mg concentration of bulk continental crust in GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The resulting \pCOtwo is $<$500~ppm, indicating that, while the presence of mafic rocks in these igneous provinces modulates steady-state \pCOtwo as has been suggested to be important for Paleogene cooling \cite{Kent2013a}, its contribution is less than that of the SEAI, which have high-relief and a wet tropical climate in conjunction with high Ca+Mg lithologies.
 
@@ -155,21 +155,23 @@ Previous work has estimated that the decrease in \pCOtwo since 5~Ma associated w
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{Manuscript/Figures/weatherability_curves.pdf}
-    \caption{Weatherability curves for the modern and ``paleo-SEAI'' scenarios shown in Figure \ref{fig:scenario_pCO2}. Details on how these curves were generated are described in \MM. Each of the 4 curves represent a different tectonic boundary condition (i.e. the reconstructed paleoshorelines of the SEAI; Fig. \ref{fig:shoreline_growth}A) and therefore a different global weatherability. The curves show the resulting \pCOtwo for a given volcanic degassing flux such that the input flux is balanced by the silicate weathering output flux. Point B represents the pre-Industrial, in which \pCOtwo is 286~ppm. The arrow from Point A$_{1}$ to B represents the ``change in weatherability only'' scenario, in which global weatherability changes as the SEAI emerge, but the volcanic degassing flux does not change over the past 15~m.y. In this scenario, the \pCOtwo decreases from the value dictated by the 15~Ma ``paleo-SEAI'' weatherability curve ($\sim$570~ppm). The arrow from Point A$_{2}$ to B instead represents the ``change in degassing only'' scenario, in which global weatherability remains the same as the pre-Industrial, but the same change in \pCOtwo as the ``change in weatherability only'' scenario is achieved by decreasing the volcanic degassing flux from a value $\sim$13\% greater than the pre-Industrial. The arrow from Point A$_{3}$ to B represents the ``change in weatherability and degassing'' scenario, in which the same change in \pCOtwo as the other two scenarios is achieved by increasing global weatherability from our 5~Ma tectonic boundary condition and decreasing the volcanic degassing flux from a value $\sim$7\% greater than the pre-Industrial.}
+    \caption{Weatherability curves for the modern and ``paleo-SEAI'' scenarios shown in Figure \ref{fig:scenario_pCO2}. Details on how these curves were generated are described in \MM. Each of the 4 curves represent a different tectonic boundary condition (i.e. the reconstructed paleoshorelines of the SEAI; Fig. \ref{fig:shoreline_growth}A) and therefore a different global weatherability. The curves show the resulting \pCOtwo for a given volcanic degassing flux such that the input flux is balanced by the silicate weathering output flux. Point B represents the pre-industrial, in which \pCOtwo is 286~ppm. The arrow from Point A$_{1}$ to B represents the ``change in weatherability only'' scenario, in which global weatherability changes as the SEAI emerge, but the volcanic degassing flux does not change over the past 15~m.y. In this scenario, the \pCOtwo decreases from the value dictated by the 15~Ma ``paleo-SEAI'' weatherability curve ($\sim$570~ppm). The arrow from Point A$_{2}$ to B instead represents the ``change in degassing only'' scenario, in which global weatherability remains the same as the pre-industrial, but the same change in \pCOtwo as the ``change in weatherability only'' scenario is achieved by decreasing the volcanic degassing flux from a value $\sim$13\% greater than the pre-industrial. The arrow from Point A$_{3}$ to B represents the ``change in weatherability and degassing'' scenario, in which the same change in \pCOtwo as the other two scenarios is achieved by increasing global weatherability from our 5~Ma tectonic boundary condition and decreasing the volcanic degassing flux from a value $\sim$7\% greater than the pre-industrial.}
     \label{fig:weatherability_curves}
 \end{figure}
 
 A decrease in volcanic degassing \cite{Berner1983a} has also been proposed as a driver for Neogene cooling. However, proxy-based estimates of the evolution of volcanic degassing fluxes throughout the Neogene are inconsistent with each other, such that not even the sign of the change in volcanic degassing over the past $\sim$15~m.y. is without ambiguity \cite{Godderis2017c}. For example, it has both been estimated that the volcanic degassing flux was $\sim$25\% lower \cite{Cogne2006a} and $\sim$10\% higher \cite{Van-Der-Meer2014a} at 15~Ma relative to the present day.
 
-Our model framework provides an opportunity to estimate the decrease in volcanic degassing flux necessary to achieve the same change in \pCOtwo predicted for the increase in global weatherability associated with the emergence of the SEAI over the past 15~m.y. If we use the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI; Fig. S3), GEOCLIM estimates a pre-Industrial volcanic degassing flux of 4.1$\times$10$^{12}$~mol/yr to balance the silicate weathering flux at 286~ppm. If we then assume that this volcanic degassing flux did not change over the past 15~m.y., then GEOCLIM estimates that the increase in global weatherability associated with the emergence of the SEAI lead to a change in \pCOtwo of $\sim$280~ppm (``change in weatherability only'' scenario in Fig. \ref{fig:weatherability_curves}). If we instead assume that global weatherability did not change over the past 15~m.y., then we estimate that the volcanic degassing flux needs to have been $\sim$13\% greater at 15~Ma relative to the pre-Industrial to drive the same $\sim$280~ppm change in \pCOtwo (``change in degassing only'' scenario in Fig. \ref{fig:weatherability_curves}).
+Our model framework provides an opportunity to estimate the decrease in volcanic degassing flux necessary to achieve the same change in \pCOtwo predicted for the increase in global weatherability associated with the emergence of the SEAI over the past 15~m.y. If we use the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI; Fig. S3), GEOCLIM estimates a pre-industrial volcanic degassing flux of 4.1$\times$10$^{12}$~mol/yr to balance the silicate weathering flux at 286~ppm. If we then assume that this volcanic degassing flux did not change over the past 15~m.y., then GEOCLIM estimates that the increase in global weatherability associated with the emergence of the SEAI lead to a change in \pCOtwo of $\sim$280~ppm (``change in weatherability only'' scenario in Fig. \ref{fig:weatherability_curves}). If we instead assume that global weatherability did not change over the past 15~m.y., then we estimate that the volcanic degassing flux needs to have been $\sim$13\% greater at 15~Ma relative to the pre-industrial to drive the same $\sim$280~ppm change in \pCOtwo (``change in degassing only'' scenario in Fig. \ref{fig:weatherability_curves}).
 
-This $\sim$13\% value is higher than 10\%, the highest current estimate for the volcanic degassing flux at 15~Ma relative to the present day \cite{Van-Der-Meer2014a}, suggesting that reasonable changes in the volcanic degassing flux alone are insufficient to drive the majority of cooling observed over the Neogene. However, changes in the volcanic degassing flux would have modulated changes in \pCOtwo associated with changes in global weatherability. For example, take a scenario where the increase in global weatherability associated with SEAI emergence over the past 15~m.y. is an overestimate and the increase is more accurately reflected by the difference in global weatherability between our 5~Ma and modern tectonic boundary conditions (``change in weatherability and degassing'' scenario in Fig. \ref{fig:weatherability_curves}). In this scenario, if the volcanic degassing flux decreased from a value $\sim$7\% greater than the pre-Industrial in conjunction with the smaller change in weatherability, we can achieve the same $\sim$280~ppm change in \pCOtwo.
+This $\sim$13\% value is higher than 10\%, the highest current estimate for the volcanic degassing flux at 15~Ma relative to the present day \cite{Van-Der-Meer2014a}, suggesting that changes in the volcanic degassing flux alone are insufficient to drive the majority of cooling observed over the Neogene. However, changes in the volcanic degassing flux would have modulated changes in \pCOtwo associated with changes in global weatherability. For example, take a scenario where the increase in global weatherability associated with SEAI emergence over the past 15~m.y. is an overestimate and the increase is more accurately reflected by the difference in global weatherability between our 5~Ma and modern tectonic boundary conditions (``change in weatherability and degassing'' scenario in Fig. \ref{fig:weatherability_curves}). In this scenario, a decrease in the volcanic degassing flux from a value $\sim$7\% greater than the pre-industrial in conjunction with the smaller change in weatherability can achieve the same $\sim$280~ppm decrease in \pCOtwo.
 
 \subsection*{Himalayan Uplift}
 
-Himalayan uplift \cite{Raymo1992a, Galy2007a} has also been proposed as a driver for Neogene cooling. Rising marine \SrSr has been associated with increasing weathering of the high \SrSr Himalayan lithologies \cite{Raymo1992a}. This increase in \SrSr since ca. 35~Ma is followed by a decrease in slope ca. 15~Ma that has been attributed to exhumation of relatively low \SrSr and high \OsOs Lesser Himalayan lithologies \cite{Quade1997a, Colleps2018a}, but could also be at least partially driven by the exhumation of mafic and organic-rich forearc sediments in the SEAI during arc-continent collision. Enhanced organic matter burial in the Bay of Bengal due to high sedimentation rates could also have contributed to Neogene cooling \cite{Galy2007a}.
+Marine \SrSr has overall been increasing since ca. 35~Ma \cite{McArthur2012a}. The traditional explanation for this trend is that it reflects increased weathering of radiogenic (i.e. high \SrSr) silicate rocks \cite{Raymo1988a}. Associated with this explanation is the proposal that increasing weathering of radiogenic silicate rocks in the Himalayas was the primary driver of Neogene cooling \cite{Raymo1992a}. It could be argued that increasing marine \SrSr is inconsistent with the hypothesis that increasing weathering of juvenile (i.e. low \SrSr) silicate rocks in the SEAI was an important driver of Neogene cooling. However, the ratio of silicate weathering fluxes from radiogenic cratonic rocks vs. juvenile arc lithologies can be at least partially decoupled from marine \SrSr via the regional weathering of isotopically-unique carbonates. For example, highly radiogenic carbonates are abundant in Himalayan strata, and it is estimated that $\sim$75\% of Sr coming from the Himalayas can be attributed to carbonate rather than silicate weathering \cite{Jacobson2002a, Quade2003a, Oliver2003a}. As such, there are challenges in interpreting the marine \SrSr record as a proxy for silicate weathering fluxes in the Cenozoic, and potentially deeper in the geologic record as well. Nevertheless, steadily increasing marine \SrSr is interrupted ca. 16~Ma when the slope of the \SrSr curve decreases \cite{McArthur2012a}. This decrease in slope has been attributed to coincident exhumation of relatively low \SrSr Outer Lesser Himalaya carbonates \cite{Myrow2015a, Colleps2018a}, but could also be at least partially driven by the emergence of low \SrSr lithologies in the SEAI during arc-continent collision.
 
-It has been argued that enhanced weathering in regions of active uplift predicts an increase in global alkalinity fluxes. However, global alkalinity delivery from silicate weathering needs to be nearly constant to keep the long-term carbon cycle in steady-state \cite{Kump1997a}. Enhanced weathering in a region such as the SEAI is compensated by a decrease in weathering elsewhere. Global alkalinity delivery from silicate weathering does not change, but occurs more efficiently and thereby at lower \pCOtwo. Given that carbonate weathering is disconnected from the long-term carbon-cycle mass balance, changes in carbonate accumulation through time \cite{Si2019a} could be driven by changes in carbonate weathering.
+Himalayan uplift would have affected geological carbon sinks, either via increased weathering of silicate rocks \cite{Raymo1992a} or enhanced burial of organic matter in the Bengal Fan \cite{Galy2007a}. Increased weathering of the SEAI as they emerged would have occurred in tandem with such changes in the Himalaya. Given the large uncertainty associated with changes in regional climatology across Asia due to Himalayan orogeny, developing quantitative estimates of the evolution of global silicate weathering fluxes associated with this orogeny remains a major challenge.
+
+Global alkalinity delivery from silicate weathering needs to be nearly constant to keep the long-term carbon cycle in steady-state \cite{Kump1997a}. Enhanced weathering in a region such as the SEAI is compensated by a decrease in weathering elsewhere. Global alkalinity delivery from silicate weathering does not change, but occurs more efficiently and thereby at lower \pCOtwo. Given that carbonate weathering is disconnected from the long-term carbon-cycle mass balance, changes in carbonate accumulation through time \cite{Si2019a} could be driven by changes in carbonate weathering.
 
 \subsection*{Ocean/Atmosphere Circulation}
 
@@ -177,7 +179,7 @@ Other hypotheses to explain ice sheet growth over the Neogene invoke changes in 
 
 \section*{Conclusions}
 
-Coupled geological constraints and modeling experiments demonstrate that the SEAI has been a growing hot spot for carbon sequestration due to silicate weathering from the Miocene to present. Changes in volcanic degassing and paleogeography elsewhere on Earth, particularly in the Himalaya and Central America, would have also effected geological carbon sources and sinks. Such changes are likely to have induced complex feedbacks on many Earth surface processes. Yet, not only does the history of SEAI emergence coincide with Neogene cooling and the onset of Northern Hemisphere glaciation, but our coupled weathering-climate model also indicates that the associated steady-state \pCOtwo change is sufficient to explain much of this cooling. These results highlight that the Earth's climate state is particularly sensitive to changes in tropical paleogeography.
+Coupled geological constraints and modeling experiments demonstrate that the SEAI has been a growing hot spot for carbon sequestration due to silicate weathering from the Miocene to present. Changes in volcanic degassing and paleogeography elsewhere on Earth, particularly in the Himalaya and Central America, would have also affected geological carbon sources and sinks. Yet, not only does the history of SEAI emergence coincide with Neogene cooling and the onset of Northern Hemisphere glaciation, but our coupled weathering-climate model also indicates that the associated steady-state \pCOtwo change is sufficient to explain much of this cooling. These results highlight that the Earth's climate state is particularly sensitive to changes in tropical paleogeography.
 
 \matmethods{
 The code for the GEOCLIM model used in this study can be found at: \url{https://github.com/piermafrost/GEOCLIM-dynsoil-steady-state}. The code that generated the inputs and analyzed the output of the GEOCLIM model can be found at: \url{https://github.com/Swanson-Hysell-Group/GEOCLIM_Modern}.
